--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
+    "express-joi-validation": "^4.0.4-beta.0",
     "express-validator": "^6.6.1",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/hapi__joi": "^17.1.6",
     "@types/supertest": "^2.0.10",
     "jest": "^26.4.2",
     "supertest": "^5.0.0",
