--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.4-beta.0",
     "express-validator": "^6.6.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "uuidv4": "^6.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
