--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.4-beta.0",
     "express-validator": "^6.6.1",
+    "sqlite3": "^5.0.0",
     "typescript": "^4.0.3",
     "uuidv4": "^6.2.4"
   },
